# Trading-Agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Fundamentals.py  News_Analyst.py  README.md  Technical_Analyst.py  graph.py  main.py  pyproject.toml  requirements.txt  start-dev.ps1
.github/workflows/: scrape-firms.yml  scrape-gdacs.yml  scrape-gdelt.yml  scrape-reliefweb.yml  scrape-usgs.yml  scrape-wikipedia.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt  test_events_db.py  test_structure.py
backend/app/: main.py
backend/app/cache/: __init__.py  decorators.py  redis_client.py
backend/app/config/: settings.py
backend/app/core/: fundamental.py  graph.py  news.py  sentiment.py  technical.py
backend/app/events/: __init__.py  db.py  models.py  routes.py
backend/app/models/: schemas.py
backend/app/routes/: analysis.py  chat.py  health.py
backend/app/utils/: ticker_validator.py
backend/migrations/: 0001_init_events.sql  0002_upsert_event_rpc.sql
backend/scraper/: README.md  __init__.py
backend/scraper/common/: __init__.py  cameo.py  enrichment.py  models.py  supabase_client.py  upsert.py
backend/scraper/scripts/: __init__.py  run_firms.py  run_gdacs.py  run_gdelt.py  run_reliefweb.py  run_usgs.py  run_wikipedia.py
backend/scraper/sources/: __init__.py  firms.py  gdacs.py  gdelt.py  reliefweb.py  usgs.py  wikipedia.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: AIAnalyst.jsx  AnalysisForm.jsx  ChartView.jsx  ChatInterface.jsx  ResultsDisplay.jsx  SafeHTML.jsx
frontend/src/config/: constants.js
static/css/: style.css
static/js/: app.js
templates/: index.html
(+19 files in other folders)
