[project]
name = "trading-agent-backend"
version = "1.0.0"
description = "Trading Agent Backend API - FastAPI-based stock analysis platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.2",
    "feedparser>=6.0.12",
    "jinja2>=3.1.6",
    "langchain-google-genai>=2.1.12",
    "langgraph>=0.6.7",
    "matplotlib>=3.10.6",
    "mplfinance>=0.12.10b0",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "seaborn>=0.13.2",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
    "yfinance>=0.2.66",
    "redis>=5.0.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "vaderSentiment>=3.3.2",
    # Event Map — read-only backend client.
    # Writes (scrapers, enricher, retention) live in /scrapers and run on
    # GitHub Actions; they have their own requirements.txt.
    "supabase>=2.7.0",
    # Wikipedia scraper dependencies
    "beautifulsoup4>=4.12.0",
    "google-genai>=0.8.0",
]
